0.43
 - Update Map::Tube to 3.11 version.
 - Update Map::Tube::Exception to 3.06 version.
 - Update Test::Map::Tube to 0.13 version.

0.42 2015-10-19T07:26:22+02:00
 - Fix author requires.
 - Update Map::Tube to 3.07 version.
 - Update Map::Tube::Exception to 3.05 version.
 - Update Map::Tube::Graph to 0.05 version.
 - Update Task::Map::Tube::Metro to 0.08 version.
 - Update Test::Map::Tube to 0.10 version.

0.41 2015-09-27T18:13:27+02:00
 - Update Task::Map::Tube::Metro to 0.05 version.
 - Update Test::Map::Tube to 0.08 version.

0.40 2015-09-21T22:40:30+02:00
 - Add Map::Tube::Exception 3.03 version.
 - Move author tests to xt/ directory.
 - Update Map::Tube to 3.01 version.
 - Update Map::Tube::CLI to 0.13 version.
 - Update Map::Tube::Plugin::Formatter to 0.08 version.
 - Update Map::Tube::Plugin::Graph to 0.19 version.
 - Update Task::Map::Tube::Metro to 0.04 version.

0.39 2015-09-07T13:54:05+02:00
 - Improve SEE ALSO section in doc.
 - Update Map::Tube::CLI to 0.11 version.
 - Update README.
 - Update Task::Map::Tube::Metro to 0.03 version.

0.38 2015-08-25T22:39:09+02:00
 - Update Map::Tube::CLI to 0.10 version.
 - Update Task::Map::Tube::Metro to 0.02 version.

0.37 2015-08-07T17:35:06+02:00
 - Update Map::Tube::CLI 0.09 version.

0.36 2015-05-19T14:02:41+02:00
 - Update Map::Tube::CLI 0.08 version.
 - Update Module::Install to 1.16 version.

0.35 2015-04-28T15:59:07+02:00
 - Update Map::Tube to 3.00 version.
 - Update Map::Tube::CLI 0.07 version.

0.34 2015-03-28T18:09:27+01:00
 - Move metro modules to Task::Map::Tube::Metro.
 - Remove obsolete test module dependency.

0.33 2015-03-28T17:49:47+01:00
 - Update Map::Tube to 2.97 version.
 - Update Map::Tube::Berlin to 0.09 version.
 - Update Map::Tube::CLI 0.06 version.
 - Update Map::Tube::London to 0.72 version.
 - Update Map::Tube::Plugin::Formatter to 0.07 version.
 - Update Map::Tube::Plugin::FuzzyFind 0.08 version.

0.32 2015-03-24T22:57:17+01:00
 - Add Map::Tube::CLI 0.02 version.