@@ -24,6 +24,7 @@ no_index:
 requires:
   Map::Tube: 3.11
   Map::Tube::CLI: 0.13
+  Map::Tube::Cookbook: 0.02
   Map::Tube::Exception: 3.06
   Map::Tube::Graph: 0.05
   Map::Tube::GraphViz: 0.06
