@@ -21,6 +21,7 @@ readme_from 'Tube.pm';
 recursive_author_tests('xt');
 requires 'Map::Tube' => 3.11;
 requires 'Map::Tube::CLI' => 0.13;
+requires 'Map::Tube::Cookbook' => 0.02;
 requires 'Map::Tube::Graph' => 0.05;
 requires 'Map::Tube::GraphViz' => 0.06;
 requires 'Map::Tube::Exception' => 3.06;
